--- a/styles/global.css
+++ b/styles/global.css
@@ -10,6 +10,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
+a:hover {
+  color: rgb(12, 88, 133);
+}
 
 * {
   box-sizing: border-box;
@@ -62,4 +65,25 @@ footer a {
   align-items: center;
   text-decoration: none;
   color: inherit;
+}
+.logo-wrapper {
+  width: max-content;
+  height: 100%;
+  margin: 0 auto 2rem;
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+  border: 5px solid rgb(12, 88, 133);
+  border-radius: 50%;
+}
+.logo {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100px;
+  height: 100px;
+  margin: 2rem;
+}
+.hemus-title {
+  color: rgb(12, 88, 133);
 }
