--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -44,7 +44,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-
+  gap: 1rem;
   max-width: 800px;
   margin-top: 3rem;
 }
@@ -87,5 +87,9 @@
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+  .card {
+    margin: 0;
+    width: 100%;
   }
 }
